--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^8.2.14",
+    "@angular/cdk": "^8.2.3",
     "@angular/common": "~8.1.2",
     "@angular/compiler": "~8.1.2",
     "@angular/core": "~8.1.2",
@@ -25,8 +26,11 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
+    "@swimlane/ngx-charts": "^10.0.0",
     "core-js": "^2.5.4",
+    "ionic-angular": "^3.9.9",
     "jwt-decode": "^2.2.0",
+    "moment": "^2.24.0",
     "ngx-chips": "2.0.2",
     "ngx-toastr": "^11.2.1",
     "rxjs": "~6.5.1",
